--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -26,6 +26,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: |
-            ghcr.io/${{ format('{0}/{1}', github.repository_owner, 'ecommerce-microservices') }}:latest
-            ghcr.io/${{ format('{0}/{1}', github.repository_owner, 'ecommerce-microservices') }}:${{ github.sha }}
+          repository: ghcr.io/${{ github.repository }}
+          tags:
+            - latest
+            - ${{ github.sha }}
