--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -27,6 +27,6 @@ jobs:
           context: .
           push: true
           repository: ghcr.io/${{ github.repository }}
-          tags:
+          tags: |
             - latest
             - ${{ github.sha }}
