--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -28,5 +28,5 @@ jobs:
           push: true
           repository: ghcr.io/${{ github.repository }}
           tags: |
-            - latest
-            - ${{ github.sha }}
+            latest
+            ${{ github.sha }}
