--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   build_and_push:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest # Change this to a Windows runner
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
